After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710995 - Crash if mount_operation is NULL
Crash if mount_operation is NULL
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: client module
git master
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2013-10-28 09:59 UTC by Ross Lagerwall
Modified: 2013-10-31 12:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't crash if mount_operation is given as NULL (2.43 KB, patch)
2013-10-28 10:02 UTC, Ross Lagerwall
accepted-commit_now Details | Review

Description Ross Lagerwall 2013-10-28 09:59:01 UTC
With most of the _with_operation methods of GDaemonFile, the mount_operation is ref'd without checking for NULL causing a crash if NULL is given (which is allowed).
Comment 1 Ross Lagerwall 2013-10-28 10:02:38 UTC
Created attachment 258279 [details] [review]
Don't crash if mount_operation is given as NULL

Check for NULL before using the mount_operation given to any of
GDaemonFile's methods to prevent a crash due to refing NULL.
Comment 2 Ondrej Holy 2013-10-31 12:11:45 UTC
Review of attachment 258279 [details] [review]:

It looks good.
Comment 3 Ross Lagerwall 2013-10-31 12:42:47 UTC
Pushed to master as a9c38f1.