Don't crash if mount_operation is given as NULL

Check for NULL before using the mount_operation given to any of
GDaemonFile's methods to prevent a crash due to refing NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=710995